# LetheLauncher

./: LetheLauncher.sln  README.md  build.bat  build.sh
.github/workflows/: build.yml
LetheLauncher/: App.axaml  App.axaml.cs  GameStarter.cs  LetheLauncher.csproj  Logger.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
LetheLauncher/Models/: ManifestModels.cs
LetheLauncher/Services/: DownloadService.cs
lethe-launcher/: index.html  package-lock.json  package.json
lethe-launcher/src/: App.tsx  index.css
lethe-launcher/src-tauri/: Cargo.toml  tauri.conf.json
lethe-launcher/src-tauri/src/: auth.rs  commands.rs  config.rs  downloader.rs  launcher.rs  lib.rs  logger.rs  main.rs  manifest.rs  steam.rs  updater.rs  verifier.rs
lethe-launcher/src/components/: FileIndicator.tsx  LoginButton.tsx  ModList.tsx  ProgressBar.tsx  SettingsPanel.tsx  StatusPanel.tsx  UpdateBanner.tsx
lethe-launcher/src/hooks/: useAuth.ts  useLauncher.ts  useSettings.ts  useUpdater.ts
lethe-launcher/src/test/: components.test.tsx
lethe-launcher/src/types/: auth.ts  launcher.ts  updater.ts
