[package]
name = "LimbusCompany"
version = "0.1.0"
description = "Lethe Launcher - Limbus Company custom launcher"
authors = ["Lethe"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "limbus_company_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures-util = "0.3"
twox-hash = "1.6"
rust-ini = "0.21"
libloading = "0.8"
log = "0.4"

urlencoding = "2"
rand = "0.8"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
